<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tourist Guider Bangladesh</string>
    <string name="android_n_development">Android \nDevelopment</string>
    <string name="app_description">This is a demo application</string>
    <string name="loader">Loader</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="dashboard">Dashboard</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="or">Or</string>
    <string name="login_with_social_accounts">Login With Social Accounts</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="this_is_a_custom_toast">This is a custom Toast</string>
    <string name="phone">Phone</string>
    <string name="popular_tab">Popular Tab</string>
    <string name="pls_chk_internet">Please check your internet connection</string>
    <string name="trending_now">Trending now</string>
    <string name="best_selling_products">Best places</string>
    <string name="search">Search</string>
    <string name="this_feature_is_under_development">This feature is under development</string>
    <string name="english">English</string>
    <string name="dhaka">Dhaka</string>
    <string name="chittagong">Chittagong</string>
    <string name="khulna">Khulna</string>
    <string name="rajshahi">Rajshahi</string>
    <string name="barisal">Barisal</string>
    <string name="sylhet">Sylhet</string>
    <string name="rangpur" tools:ignore="MissingTranslation">Rangpur</string>
    <string name="mymensingh">Mymensingh</string>
    <string name="chittagong_division">Chittagong Division</string>
    <string name="dhaka_division">Dhaka Division</string>
    <string name="khulna_division">Khulna Division</string>
    <string name="barisal_divsion">Barishal Division</string>
    <string name="rangpur_division">Rangpur Division</string>
    <string name="rajshahi_division">Rajshahi Division</string>
    <string name="sylhet_division">Sylhet Division</string>
    <string name="mymensingh_division">Mymensingh Division</string>
    <string name="cox_s_bazar">Cox\'s Bazar</string>
    <string name="_17_hotels">17 Hotels</string>
    <string name="_5_hours">5 Hours</string>
    <string name="division">Division</string>
    <string name="map_direction">Map Direction</string>
    <string name="description">Description</string>
    <string name="cox_bazar_desc">Cox\'s Bazar Beach, located at Cox\'s Bazar, Bangladesh, is the longest natural sea beach in the world running 120 kilometres and 5th longest beach after Praia do Cassino of Brazil, Padre Island on the US Gulf Coast, Eighty Mile Beach in Western Australia, and Ninety Mile Beach of Australia</string>
    <string name="cox_s_bazar_sea_beach">Cox\'s Bazar Sea Beach</string>
    <string name="tour">tour</string>
    <string name="pls_turn_on_internet">Please turn on  internet connection</string>
    <string name="all_time_best_selling_products">All time best visiting places</string>
    <string name="place_chandranath_pahar">Chandranath Pahar</string>
    <string name="place_chandranath_pahar_description">Chandranath Pahar is a hill located in Sitakunda, Chittagong, offering breathtaking views and a spiritual atmosphere.</string>
    <string name="place_guliakhali_sea_beach">Guliakhali Sea Beach</string>
    <string name="place_guliakhali_sea_beach_description">Guliakhali Sea Beach is a serene coastal area in Bangladesh, providing a tranquil escape and picturesque views.</string>
    <string name="sitakund">Sitakund</string>
    <string name="place_saint_martin">Saint Martin</string>
    <string name="place_saint_martin_description">Saint Martin\'s Island is a picturesque coral island located in the Bay of Bengal. It is renowned for its pristine beaches, crystal-clear turquoise waters, and diverse marine life. The island offers opportunities for snorkeling, diving, and exploring vibrant coral reefs. Visitors can relish delicious seafood, witness stunning sunsets, and experience the tranquil island atmosphere. Saint Martin\'s Island is a paradise for nature lovers and a perfect escape from the bustling city life.</string>
    <string name="place_patenga_sea_beach">Patenga Sea Beach</string>
    <string name="place_patenga_sea_beach_description">Patenga Sea Beach is a popular beach destination in Chittagong, Bangladesh. It is known for its long stretch of sandy shores, gentle waves, and scenic beauty. Visitors can enjoy leisurely walks along the beach, indulge in local street food, and capture mesmerizing sunsets. The beach also offers horse riding and boat trips for a fun-filled experience. Patenga Sea Beach is a favorite spot for locals and tourists alike, providing a refreshing coastal retreat.</string>
    <string name="place_kaptai_lake">Kaptai Lake</string>
    <string name="place_kaptai_lake_description">Kaptai Lake is a man-made reservoir located in the Rangamati Hill District of Bangladesh. It is surrounded by lush green hills and dense forests, creating a scenic and serene environment. The lake offers boat rides, allowing visitors to explore its vast expanse and enjoy the breathtaking views. Kaptai Lake is also home to various indigenous tribal communities, offering a glimpse into their traditional way of life. The combination of natural beauty and cultural richness makes Kaptai Lake a must-visit destination for nature enthusiasts and cultural explorers.</string>
    <string name="place_buddha_dhatu_jadi">Buddha Dhatu Jadi</string>
    <string name="place_buddha_dhatu_jadi_description">Buddha Dhatu Jadi, also known as the Bandarban Golden Temple, is a magnificent Buddhist temple located in Bandarban, Bangladesh. The temple features stunning architecture adorned with intricate designs, colorful decorations, and golden accents. It houses a large golden statue of Lord Buddha, surrounded by beautiful gardens and serene surroundings. Visitors can immerse themselves in the peaceful ambiance, explore the temple complex, and gain insights into Buddhist teachings and practices. Buddha Dhatu Jadi is a spiritual and cultural landmark, offering a serene and enlightening experience.</string>
    <string name="place_radiant_fish_world">Radiant Fish World</string>
    <string name="place_radiant_fish_world_description">Radiant Fish World is a unique aquatic attraction situated in Dhaka, Bangladesh. It is a paradise for fish enthusiasts and nature lovers alike. The world-class aquarium showcases a wide range of exotic and colorful fish species from around the world. Visitors can marvel at the vibrant underwater world, observe fascinating marine life, and learn about different aquatic ecosystems. Radiant Fish World also offers educational exhibits, interactive displays, and informative presentations. It is a captivating destination that combines entertainment, education, and appreciation for the beauty of marine life.</string>
    <string name="cox_bazar">Cox Bazar</string>
    <string name="teknaf">Teknaf</string>
    <string name="bandarban">Bandarban</string>
    <string name="place_ahsan_manzil">Ahsan Manzil Museum</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="maps">Maps</string>
    <string name="home">Home</string>
    <string name="nearby_attractions">Nearby Attractions</string>
    <string name="restaurants_cafes">Restaurants &amp; Cafes</string>
    <string name="travel_tips">Travel Tips</string>
    <string name="about_us">About Us</string>
    <string name="welcome_to_the_bangladesh_tourist_guider_app">Welcome to the Bangladesh Tourist Guider App!</string>
    <string name="our_app_aims_to_provide_you_with_a_comprehensive_guide_to_explore_the_rich_cultural_heritage_natural_beauty_and_historical_landmarks_of_bangladesh_whether_you_re_a_local_resident_or_a_visitor_from_abroad_our_app_is_designed_to_enhance_your_travel_experience_and_make_your_journey_through_bangladesh_memorable_discover_the_hidden_gems_of_bangladesh_through_our_carefully_curated_collection_of_destinations_including_stunning_beaches_historical_sites_vibrant_cities_serene_rivers_and_picturesque_landscapes_our_app_offers_detailed_information_about_each_location_including_its_significance_historical_background_cultural_significance_and_must_visit_attractions_navigate_through_our_interactive_maps_and_find_your_way_to_your_desired_destinations_effortlessly_our_user_friendly_interface_ensures_easy_access_to_information_making_it_convenient_for_you_to_plan_your_itinerary_and_explore_the_wonders_of_bangladesh_at_your_own_pace_stay_updated_with_the_latest_news_events_and_festivals_happening_across_the_country_our_app_provides_valuable_insights_into_local_traditions_cuisines_and_customs_allowing_you_to_immerse_yourself_in_the_true_essence_of_bangladesh">Our app aims to provide you with a comprehensive guide to explore the rich cultural heritage, natural beauty, and historical landmarks of Bangladesh. Whether you\'re a local resident or a visitor from abroad, our app is designed to enhance your travel experience and make your journey through Bangladesh memorable. Discover the hidden gems of Bangladesh through our carefully curated collection of destinations, including stunning beaches, historical sites, vibrant cities, serene rivers, and picturesque landscapes. Our app offers detailed information about each location, including its significance, historical background, cultural significance, and must-visit attractions. Navigate through our interactive maps and find your way to your desired destinations effortlessly. Our user-friendly interface ensures easy access to information, making it convenient for you to plan your itinerary and explore the wonders of Bangladesh at your own pace. Stay updated with the latest news, events, and festivals happening across the country. Our app provides valuable insights into local traditions, cuisines, and customs, allowing you to immerse yourself in the true essence of Bangladesh.</string>
    <string name="happy_exploring_n_nthe_bangladesh_tourist_guider_app_team">Happy exploring!\n\nThe Bangladesh Tourist Guider App Team</string>
    <string name="tour_guiid_bd_v1">Bangladesh is without doubt one of Asia’s undiscovered gems, but unfortunately (mostly due to a mixture of political instability and natural disasters), Bangladesh has gathered not the best reputation internationally. Bangladesh has yet to experience much tourism and is mostly un-touristed: a foreign face will excite a lot of attention and interest, almost always of a friendly and kindly nature. “Excuse me mam, your country?” were probably the words I heard spoken most to me on my trip. As an un-touristed destination, Bangladesh is relatively free from the tourist-scams that are common in neighbouring India. On the other hand, Bangladesh also lacks much of the infrastructure of neighbouring India, and travelling around can be hard work. Roads can be unpaved, traffic is dire in some places (mostly Dhaka) – for more see the transport section – and transport conditions are basic at best. English is not widely spoken, which can make independent travel difficult in more rural areas. Bangladesh can also be raw: along with the beautiful landscapes, people and places, expect to see a lot of poverty, and a huge amount of pollution and dirt. Don’t come if you’re not comfortable with dressing conservatively, sitting in crowded transport, and experiencing a variety of conditions. Perhaps the best description of Bangladesh I’ve heard is a “more raw version of India” – but even that comparison falls a long way short of the variety and richness of culture available in Bangladesh, and the positive surprises that this small but bustling country has in store for travellers who make it there.</string>
    <string name="sign_out">Sign Out</string>
</resources>