<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/maps"
            android:icon="@drawable/baseline_location_on_24_orrange"
            android:title="@string/maps" />

        <!-- Group 3: Nearby -->
        <item
            android:id="@+id/nearby_attractions"
            android:icon="@drawable/baseline_near_me_24"
            android:title="@string/nearby_attractions" />

        <!-- Group 4: Restaurants & Cafes -->
        <item
            android:id="@+id/restaurants_cafes"
            android:icon="@drawable/baseline_local_hotel_24"
            android:title="@string/restaurants_cafes" />





        <!-- Group 7: Travel Tips -->
        <item
            android:id="@+id/travel_tips"
            android:icon="@drawable/baseline_tips_and_updates_24"
            android:title="@string/travel_tips" />

        <!-- Group 8: Weather Updates -->


    </group>

    <group android:id="@+id/group_acc"
        android:checkableBehavior="single">

        <item
            android:id="@+id/about_us"
            android:icon="@drawable/info"
            android:title="@string/about_us" />
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/sign_out" />
    </group>


</menu>