<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.divisions.PlacesListFragment">

    <ImageView
        android:id="@+id/ivBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_35"
        android:contentDescription="@string/tour"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/dp50"
        android:layout_height="@dimen/dp50"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/tour"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDhakaDivision"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchPlaces"
        app:spanCount="2"
        tools:itemCount="4"
        tools:listitem="@layout/layout_pllace_liist" />

    <TextView
        android:id="@+id/txtPlaceBannerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="@string/division"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <EditText
        android:id="@+id/searchPlaces"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="dhaka"
        android:background="@drawable/bg_search_edit_text"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/search"
        android:inputType="text"
        android:padding="@dimen/dp10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPlaceBannerName" />
</androidx.constraintlayout.widget.ConstraintLayout>