<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/liineText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.divisions.PlaceDetailsFragment">


    <ImageView
        android:id="@+id/ivBackD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/tour"
        android:src="@drawable/baseline_arrow_back_35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackD">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivPlaceImage"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/dp16"
                android:adjustViewBounds="true"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/item3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="10dp" />

            <ImageView
                android:id="@+id/ivOpenMaps"
                android:layout_width="@dimen/dp50"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/tour"
                android:src="@drawable/show_maps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPlaceImage" />

            <ImageView
                android:id="@+id/ivGuide"
                android:layout_width="@dimen/dp50"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/tour"
                android:src="@drawable/guide1"
                app:layout_constraintStart_toEndOf="@+id/ivOpenMaps"
                app:layout_constraintTop_toBottomOf="@+id/ivPlaceImage" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:alpha="0.9"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivGuide" />

            <TextView
                android:id="@+id/txtPlaceNameD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:text="Cox's Bazar Sea Beach" />

            <TextView
                android:id="@+id/txtDistrictD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:drawableStartCompat="@drawable/baseline_location_on_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPlaceNameD"
                tools:text="Cox Bazar" />

            <TextView
                android:id="@+id/txtMapDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/map_direction"
                android:textColor="#FF9800"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/baseline_location_on_24_orrange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".9"
                app:layout_constraintStart_toEndOf="@+id/txtPlaceNameD"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/txtDescD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="serif"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="@dimen/sp18"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDistrictD" />

            <TextView
                android:id="@+id/txtDescValueD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescD"
                tools:text="@string/cox_bazar_desc" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>